--- a/html/index.html
+++ b/html/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/index.js"></script>
-    <title>Document</title>
+    <title>Collaboration</title>
 </head>
 <body>
     <h1>Welcome to WDDM 126</h1>
-    <h2>This is the first lecture</h2>
+    <h2>This is Isaac and Wilson's first collaboration</h2>
     <p>My name is Wilson, I study at humbers web design and development program. Im excited to learn more about web designs!</p>
 
     <br>
