--- a/html/index.html
+++ b/html/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/js/index.js"></script>
-    <title>Collaboration</title>
-</head>
-<body>
-    <h1>Welcome to WDDM 126</h1>
-    <h2>This is Isaac and Wilson's first collaboration</h2>
-    <p>My name is Wilson, I study at humbers web design and development program. Im excited to learn more about web designs!</p>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width= <device-width>, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <script src="/js/index.js" defer></script>
+    <title>Collaboration <!-- made a change to the page title --></title>
+  </head>
+  <body>
+    <h1>Welcome to WDDM 126 Week2-Lab</h1>
+    <h2>
+      This is Isaac and Wilson's first collaboration
+      <!-- added to the h2 text -->
+    </h2>
+    <p>
+      My name is Wilson, I study at humbers web design and development program.
+      Im excited to learn more about web designs!
+    </p>
 
-    <br>
+    <br />
     <div>
-    <img src="https://i.guim.co.uk/img/media/327aa3f0c3b8e40ab03b4ae80319064e401c6fbc/377_133_3542_2834/master/3542.jpg?width=465&dpr=1&s=none&crop=none">
-</div>
-</body>
+      <img
+        src="https://i.guim.co.uk/img/media/327aa3f0c3b8e40ab03b4ae80319064e401c6fbc/377_133_3542_2834/master/3542.jpg?width=465&dpr=1&s=none&crop=none"
+      />
+    </div>
+  </body>
 </html>
