Isaac mod commit

--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width= <device-width>, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/main.css" />
     <script src="/js/index.js" defer></script>
-    <title>Collaboration <!-- made a change to the page title --></title>
+    <title>Collaboration </title> <!-- made a change to the page title -->
   </head>
   <body>
     <h1>Welcome to WDDM 126 Week2-Lab</h1>
